# robotlib

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  classes.html  classhokuyo_1_1tcp__client-members.html  classhokuyo_1_1tcp__client.html  classrlib_1_1Actuator-members.html  classrlib_1_1Actuator.html  classrlib_1_1ActuatorHandler-members.html  classrlib_1_1ActuatorHandler.html  classrlib_1_1HokuyoLidarHandlerIP-members.html  classrlib_1_1HokuyoLidarHandlerIP.html  classrlib_1_1ImageData-members.html  classrlib_1_1ImageData.html  classrlib_1_1InfraredData-members.html  classrlib_1_1InfraredData.html  classrlib_1_1Lidar-members.html  classrlib_1_1Lidar.html  classrlib_1_1LidarData-members.html  classrlib_1_1LidarData.html  classrlib_1_1MobileBase-members.html  classrlib_1_1MobileBase.html  classrlib_1_1NaoBasicWalker-members.html  classrlib_1_1NaoBasicWalker.html  classrlib_1_1PointCloudData-members.html  classrlib_1_1PointCloudData.html  classrlib_1_1Pose-members.html  classrlib_1_1Pose.html  classrlib_1_1Robot-members.html  classrlib_1_1Robot.html  classrlib_1_1Sensor-members.html  classrlib_1_1Sensor.html  classrlib_1_1SensorData-members.html  classrlib_1_1SensorData.html  classrlib_1_1SensorHandler-members.html  classrlib_1_1SensorHandler.html  classrlib_1_1SonarData-members.html  classrlib_1_1SonarData.html  classrlib_1_1Transform-members.html  classrlib_1_1Transform.html  classrlib_1_1Vel-members.html  classrlib_1_1Vel.html  (+24 more)
docs/latex/: annotated.tex  classhokuyo_1_1tcp__client.tex  classrlib_1_1Actuator.eps  classrlib_1_1Actuator.tex  classrlib_1_1ActuatorHandler.tex  classrlib_1_1HokuyoLidarHandlerIP.eps  classrlib_1_1HokuyoLidarHandlerIP.tex  classrlib_1_1ImageData.eps  classrlib_1_1ImageData.tex  classrlib_1_1InfraredData.eps  classrlib_1_1InfraredData.tex  classrlib_1_1Lidar.eps  classrlib_1_1Lidar.tex  classrlib_1_1LidarData.eps  classrlib_1_1LidarData.tex  classrlib_1_1MobileBase.eps  classrlib_1_1MobileBase.tex  classrlib_1_1NaoBasicWalker.eps  classrlib_1_1NaoBasicWalker.tex  classrlib_1_1PointCloudData.eps  classrlib_1_1PointCloudData.tex  classrlib_1_1Pose.tex  classrlib_1_1Robot.eps  classrlib_1_1Robot.tex  classrlib_1_1Sensor.eps  classrlib_1_1Sensor.tex  classrlib_1_1SensorData.eps  classrlib_1_1SensorData.tex  (+14 more)
include/: hokuyo_client.hpp  rlib_actuator.hpp  rlib_controller.hpp  rlib_nao.hpp  rlib_observer.hpp  rlib_robot.hpp  rlib_sensor.hpp  rlib_state.hpp
lib/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: hokuyo_client.cpp  rlib_actuator.cpp  rlib_nao.cpp  rlib_robot.cpp  rlib_sensor.cpp  rlib_state.cpp
testers/: CMakeLists.txt
testers/src/: rlib_actuator_tester.cpp  rlib_nao_tester.cpp  rlib_navigation_tester.cpp  target_nao_main_only_AL.cpp
(+41 files in other folders)
